--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ dependencies = [
     "orjson>=3.10.7",
     "pandas>=2.2.3",
     "requests>=2.32.3",
-    "xarray>=2024.9.0",
     "s3tethys>=0.1.4",
     "tethys-data-models @ git+https://github.com/quinnhornblow/tethys-data-models",
     "hdf5tools>=0.4.3",
     "scipy>=1.14.1",
     "shapely>=2.0.6",
+    "xarray[io]>=2024.9.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.12"
